--- a/src/IdentityService/Pages/Shared/_Nav.cshtml
+++ b/src/IdentityService/Pages/Shared/_Nav.cshtml
@@ -1,7 +1,6 @@
 @using Duende.IdentityServer.Extensions
 @{
-#nullable enable
-    string? name = null;
+    string name = null;
     if (!true.Equals(ViewData["signed-out"]))
     {
         name = Context.User?.GetDisplayName();
@@ -13,7 +12,7 @@
 
         <a href="~/" class="navbar-brand">
             <img src="~/duende-logo.svg" class="icon-banner">
-            AutoBidHub Identity SSO --- powered by duende identity server
+            Carsties Identity SSO
         </a>
 
         @if (!string.IsNullOrWhiteSpace(name))
@@ -21,13 +20,13 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
-
+                    
                     <div class="dropdown-menu">
                         <a class="dropdown-item" asp-page="/Account/Logout/Index">Logout</a>
                     </div>
-                </li>
+              </li>
             </ul>
         }
-
+    
     </nav>
 </div>
