--- a/src/IdentityService/Pages/Account/Register/Index.cshtml
+++ b/src/IdentityService/Pages/Account/Register/Index.cshtml
@@ -3,6 +3,7 @@
 
 <div>
     <partial name="_ValidationSummary" />
+
     <div class="row">
         <div class="col-6 offset-3">
             <div class="card">
@@ -11,35 +12,38 @@
                 </div>
                 <div class="card-body">
                     <form asp-page="/Account/Register/Index">
-                        <input type="hidden" asp-for="Input.ReturnUrl" />
+                            <input type="hidden" asp-for="Input.ReturnUrl" />
 
-                        <div class="form-group">
-                            <label asp-for="Input.Username"></label>
-                            <input class="form-control" placeholder="Username" asp-for="Input.Username" autofocus>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Input.Email"></label>
-                            <input class="form-control" placeholder="Email" asp-for="Input.Email">
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Input.FullName"></label>
-                            <input class="form-control" placeholder="Full name" asp-for="Input.FullName">
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Input.Password"></label>
-                            <input type="password" class="form-control" placeholder="Password" asp-for="Input.Password"
-                                autocomplete="off">
-                        </div>
+                            <div class="form-group">
+                                <label asp-for="Input.Username"></label>
+                                <input class="form-control" placeholder="Username" asp-for="Input.Username" autofocus>
+                            </div>
 
-                        <a class="pb-2 d-block" asp-page="../Login/Index" asp-route-returnUrl="@Model.Input.ReturnUrl">
-                            Already Registered ? Go back to login. </a>
+                            <div class="form-group">
+                                <label asp-for="Input.Email"></label>
+                                <input class="form-control" placeholder="Email" asp-for="Input.Email">
+                            </div>
 
-                        <button class="btn btn-primary" name="Input.Button" value="register">Register</button>
-                        <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
-                    </form>
+                            <div class="form-group">
+                                <label asp-for="Input.FullName"></label>
+                                <input class="form-control" placeholder="Full name" asp-for="Input.FullName">
+                            </div>
+
+                            <div class="form-group">
+                                <label asp-for="Input.Password"></label>
+                                <input type="password" class="form-control" placeholder="Password" asp-for="Input.Password" autocomplete="off">
+                            </div>
+
+                            <a class="pb-2 d-block" asp-page="../Login/Index" asp-route-returnUrl="@Model.Input.ReturnUrl">
+                                Already registered? Login here
+                            </a>
+                            
+                            <button class="btn btn-primary" name="Input.Button" value="register">Register</button>
+                            <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
+                        </form>
                 </div>
 
-                @if (Model.RegisterSuccess)
+                @if(Model.RegisterSuccess)
                 {
                     <div class="alert alert-success mt-2">
                         <strong>Successfully registered</strong> - You can now login
